# meta_json

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
meta-json/: setup.cfg  tox.ini
meta-json/src/: meta_json.py
src/meta_json/: meta_json.py  meta_json_parser.py
src/tests/: TESTING.md
src/tests/integration/: test_meta_json.py
src/tests/unit/: test_meta_json.py  test_meta_json_parser.py
tests/integration/: test_meta_json.py
tests/unit/: test_meta_json.py  test_meta_json_parser.py
