[build-system]
requires = ["uv_build >= 0.9.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "meta_json"
module-root = "src"

[project]
name = "meta-json"
version = "1.0.1"
description = "Extract metadata from a deserialized JSON."
readme = 'README.md'
requires-python = ">=3.10"
authors = [{name = "Juan Cortés", email="juang.cortes@outlook.com"}] 
license-files = ["LICENSE"]
keywords = ["metadata", "json"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python",
]
dependencies = []

[project.urls]
Repository = "https://github.com/juangcr/meta_json"

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
