[metadata]
name = meta_json
version = attr: meta_json.0.0.1.dev1
author = Juan Cortés 
description = Extract metadata from a deserialized JSON.
long_description = file: README.md 
logn_description_content_type = text/markdown
keywords = metadata, json
project_urls =
    Source code = https://github.com/juangcr/meta_json
license = GNU GPLv3
license_files = LICENSE.txt
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.8
;install_requires =

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    meta_json.tests*

[options.extras_require]
test =
    pytest
    black
    flake8
    mypy
