[metadata]
name = meta_json
version = attr: meta_json.VERSION
author = Juan Cortés 
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = GPL-3-Clause
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
;install_requires =
;    requests
;    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = meta_json.module:function

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    meta_json.tests*

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
